<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="15sp">

    <ImageView
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textStyle="bold"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/chancelBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_200"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18sdp" />

        <Button
            android:id="@+id/okBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent_Night"
            android:text="@string/delete_note"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18sdp" />

    </LinearLayout>

</LinearLayout>